tests/health/gold/sdk/tests__lsp__null_char.toit.gold
tests/lsp/null_char.toit:4:3: error: Unexpected <illegal>
  
  ^
tests/lsp/null_char.toit:5:6: error: Unexpected <illegal>
  foo
     ^
tests/lsp/null_char.toit:5:3: error: Argument mismatch for 'foo'
Method does not take any arguments, but one was provided
  foo
  ^~~
tests/lsp/null_char.toit:6:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
